fixed footer resources link color contrast

--- a/why_i_run/styles/styles.css
+++ b/why_i_run/styles/styles.css
@@ -121,7 +121,7 @@ nav a {
     grid-column: 2/3;
 }
 #resources a:hover, #hero-msg a:hover, #hero-msg-why-i-run a:hover{
-    color: #008dd5;
+    color: #03cea4;
     text-decoration: underline;
 }
 #hero-msg a{
